INCLUDE_DIRECTORIES(
  ${VTK_INCLUDE_DIR}
  )

SET(KWCOMMON_BUILD_PROCESSXML 1)
# don't build it when cross compiling
IF(CMAKE_CROSSCOMPILING)
  SET(KWCOMMON_BUILD_PROCESSXML 0)
ENDIF(CMAKE_CROSSCOMPILING)

IF(PV_HOST_TOOLS_TARGET)
  SET(KWCOMMON_HOST_TOOLS_TARGET ${PV_HOST_TOOLS_TARGET})
ENDIF(PV_HOST_TOOLS_TARGET)

ADD_SUBDIRECTORY(KWCommon)
