INCLUDE_DIRECTORIES(
  ${VTK_INCLUDE_DIR}
  )

SET(KWCOMMON_BUILD_PROCESSXML 1)
# don't build it when cross compiling
IF(CMAKE_CROSSCOMPILING)
  SET(KWCOMMON_BUILD_PROCESSXML 0)
ENDIF(CMAKE_CROSSCOMPILING)

IF(COMPILE_TOOLS_TARGET)
  SET(KWCOMMON_HOST_TOOLS_TARGET ${COMPILE_TOOLS_TARGET})
ENDIF(COMPILE_TOOLS_TARGET)

ADD_SUBDIRECTORY(KWCommon)
